# shopifyseo

./: .env.example  .fuse_hidden0000001500000006  .fuse_hidden000000150000000a  .fuse_hidden000000150000000b  .fuse_hidden000000150000000c  .fuse_hidden0000001600000004  .fuse_hidden000000160000000b  .fuse_hidden000000160000000c  .fuse_hidden0000001700000005  .fuse_hidden000000170000000d  .fuse_hidden0000001800000002  .fuse_hidden0000001800000007  .fuse_hidden0000001900000003  .fuse_hidden0000001900000008  .fuse_hidden0000003300000007  .fuse_hidden0000003400000008  .fuse_hidden0000038c00000006  .fuse_hidden00000b570000000e  .fuse_hidden00000b6e0000000c  .fuse_hidden00000b6f0000000d  .fuse_hidden00000df00000000a  .fuse_hidden00000df10000000b  .fuse_hidden00000df20000000c  .fuse_hidden00000ec50000000d  .fuse_hidden00000ec60000000e  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TECHNICAL_DOC.md  pyproject.toml  start_app.sh
.github/: pull_request_template.md
backend/: requirements-dev.txt  requirements.txt
docs/: ARCHITECTURE.md  overview-dashboard-plan.md  seo-database-blueprint.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
scripts/: backfill_article_idea_cluster_ids.py  dev-restart-local.sh  diagnose_serpapi_article_idea.py  run_serp_competitors_from_seeds.py  test_psi.py  verify_google_errors.py
shopifyseo/: __init__.py  api_usage.py  article_draft_retrieval.py  audience_questions_api.py  catalog_image_work.py  seo_slug.py  (+26 more)
(+333 files in other folders)
